--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,20 +10,9 @@ resource-server-port: 7084
 audience: bff.baeldung.com
 
 server:
+  port: ${resource-server-port}
   ssl:
     enabled: false
-
-com:
-  c4-soft:
-    springaddons:
-      oidc:
-        resourceserver:
-          permit-all:
-          - /api/v1/me
-          - /v3/api-docs/**
-          - /swagger-ui/**
-
-
 
 logging:
   level:
@@ -34,9 +23,75 @@ logging:
         security: INFO
         web: INFO
         
+---
+spring:
+  config:
+    activate:
+      on-profile: no-auth0
+server:
+  ssl:
+    enabled: false
+scheme: https
+---
+spring:
+  config:
+    activate:
+      on-profile: ssl
+server:
+  ssl:
+    enabled: true
+scheme: https
+
 
 ---
 spring:
   config:
     activate:
       on-profile: auth0
+issuer: https://dev-7g6g7ug82m5ecl4i.us.auth0.com/
+username-claim-json-path: $['https://c4-soft.com/user']['name']
+authorities-json-path: $['https://c4-soft.com/user']['roles']
+audience: bff.baeldung.com
+com:
+  c4-soft:
+    springaddons:
+      oidc:
+        ops:
+        - iss: ${issuer}
+          username-claim: ${username-claim-json-path}
+          authorities:
+          - path: ${authorities-json-path}
+          aud: ${audience}
+        resourceserver:
+          permit-all:
+          - /me
+          - /v3/api-docs/**
+          - /swagger-ui/**
+          - /actuator/health/readiness
+          - /actuator/health/liveness
+---
+spring:
+  config:
+    activate:
+      on-profile: test
+issuer: https://dev-7g6g7ug82m5ecl4i.us.auth0.com/
+username-claim-json-path: $['https://c4-soft.com/user']['name']
+authorities-json-path: $['https://c4-soft.com/user']['roles']
+audience: bff.baeldung.com
+com:
+  c4-soft:
+    springaddons:
+      oidc:
+        ops:
+        - iss: ${issuer}
+          username-claim: ${username-claim-json-path}
+          authorities:
+          - path: ${authorities-json-path}
+          aud: ${audience}
+        resourceserver:
+          permit-all:
+          - /me
+          - /v3/api-docs/**
+          - /swagger-ui/**
+          - /actuator/health/readiness
+          - /actuator/health/liveness          
