--- a/.github/workflows/azure-deploy.yml
+++ b/.github/workflows/azure-deploy.yml
@@ -33,6 +33,7 @@ jobs:
         uses: azure/webapps-deploy@v3
         with: 
           app-name: ${{ env.AZURE_WEBAPP_NAME }} # Replace with your app name
+          jvm-options: -Dspring.profiles.active=no-auth0
           package: ${{ env.ASC_PACKAGE_PATH }}/**/*.jar
       
 
