--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,6 +8,13 @@ username-claim-json-path: $.preferred_username
 authorities-json-path: $.realm_access.roles
 resource-server-port: 8080
 audience: bff.baeldung.com
+spring:
+  data:
+    mongodb:
+      uri: mongodb+srv://application_user:O79u71Rlj0FDrNTC@102nationscluster.bezfxm2.mongodb.net/?retryWrites=true&w=majority&appName=102nationscluster
+      database: 102nationscluster          
+          
+          
 server:
   ssl:
     enabled: false
@@ -110,4 +117,6 @@ com:
           - /v3/api-docs/**
           - /swagger-ui/**
           - /actuator/health/readiness
-          - /actuator/health/liveness          
+          - /actuator/health/liveness    
+
+                
