--- a/pom.xml
+++ b/pom.xml
@@ -36,7 +36,7 @@
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
-		<description>Stateless REST API for the OAuth2 BFF article</description>
+	<description>Stateless REST API for the OAuth2 BFF article</description>
 
 
 	<dependencies>
@@ -69,6 +69,14 @@
 			<optional>true</optional>
 		</dependency>
 		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-mongodb</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 			<optional>true</optional>
@@ -83,7 +91,7 @@
 			<artifactId>spring-addons-starter-oidc-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-			<dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
 			<scope>test</scope>
