--- a/.github/workflows/azure-deploy-appservice.yml
+++ b/.github/workflows/azure-deploy-appservice.yml
@@ -1,5 +1,10 @@
 name: AzureSpringApps
-on: push
+on:
+  push:
+    branches:
+      - main
+    paths:
+      - azure/**
 env:
   AZURE_SUBSCRIPTION: f2ecdfbd-c9a8-424d-9fd6-b9662a147ca8
   AZURE_WEBAPP_NAME: microservices-template
