--- a/.github/workflows/azure-deploy-appservice.yml
+++ b/.github/workflows/azure-deploy-appservice.yml
@@ -2,7 +2,7 @@ name: CreateAppServicesAndApp
 on: workflow_dispatch
 env:
   AZURE_SUBSCRIPTION: 6f25a7f4-92bb-440a-a21e-1cbae174dc04
-  AZURE_WEBAPP_NAME: microservices-template
+  AZURE_WEBAPP_NAME: sb1-microservices-template
   
 jobs:
   build-and-deploy:
